--- a/index.html
+++ b/index.html
@@ -72,10 +72,9 @@ https://templatemo.com/tm-552-video-catalog
             </div>
 
             <div id="tm-video-container">
-                <video autoplay muted loop id="tm-video">
-                    <!-- <source src="video/sunset-timelapse-video.mp4" type="video/mp4"> -->
-                        <source src="https://youtu.be/OWKNteHTuUE">
-                </video>    
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/OWKNteHTuUE" 
+                        title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media; gyroscope; picture-in-picture" >
+                </iframe> 
             </div>
             
             <i id="tm-video-control-button" class="fas fa-pause"></i>
