--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ https://templatemo.com/tm-552-video-catalog
             </div>
 
             <div id="tm-video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/OWKNteHTuUE" 
+                <iframe id='tm-video' src="https://www.youtube.com/embed/OWKNteHTuUE" 
                         title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media; gyroscope; picture-in-picture" >
                 </iframe> 
             </div>
