--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@ https://templatemo.com/tm-552-video-catalog
                 </div>
             </div>
 
-            <div id="tm-video-container">
-                <iframe id='tm-video' src="https://www.youtube.com/embed/OWKNteHTuUE?autoplay=1" 
-                        title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media; gyroscope; picture-in-picture" >
-                </iframe> 
+           <div id="tm-video-container">
+                <video autoplay muted loop id="tm-video">
+                    <!-- <source src="video/sunset-timelapse-video.mp4" type="video/mp4"> -->
+                        <source src="video/wheat-field.mp4" type="video/mp4">
+                </video>    
             </div>
             
             <i id="tm-video-control-button" class="fas fa-pause"></i>
