--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ https://templatemo.com/tm-552-video-catalog
             </div>
 
            <div id="tm-video-container">
-                <video autoplay muted loop id="tm-video">
+                <video autoplay loop id="tm-video" style="width=100%;">
                     <!-- <source src="video/sunset-timelapse-video.mp4" type="video/mp4"> -->
                         <source src="video/wheat-field.mp4" type="video/mp4">
                 </video>    
