--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ https://templatemo.com/tm-552-video-catalog
 
             // Play/Pause button for video background      
             const btn = $("#tm-video-control-button");
-
+            document.getElementById("tm-video").play();
             btn.on("click", function (e) {
                 const video = document.getElementById("tm-video");
                 $(this).removeClass();
