--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ https://templatemo.com/tm-552-video-catalog
 -->
 </head>
 
-<body>
+<body style="background-color:black;">
     <div class="tm-page-wrap mx-auto">
         <div class="position-relative">
             <div class="position-absolute tm-site-header">
