--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@ https://templatemo.com/tm-552-video-catalog
 			</div>
 			<div class="tm-welcome-container tm-fixed-header tm-fixed-header-2">
 				<div class="text-center">
-					<p class="pt-5 px-3 tm-welcome-text tm-welcome-text-2 mb-1 mt-lg-0 mt-5 text-white mx-auto">Another Image BG<br>it can be fixed.<br>Content will simply slide over.</p>                	
+					<p class="pt-5 px-3 tm-welcome-text tm-welcome-text-2 mb-1 mt-lg-0 mt-5 text-white mx-auto"></p>                	
 				</div>                
             </div>
 
@@ -69,11 +69,30 @@ https://templatemo.com/tm-552-video-catalog
 					<div class="row mt-3 mb-5 pb-3">
 						<div class="col-12">
 							<div class="mx-auto tm-about-text-container px-3">
-								<h2 class="tm-page-title mb-4 tm-text-primary">About the Video Catalog</h2>
-								<p class="mb-4">Video Catalog is free HTML CSS template for your website. This Bootstrap v4.4.1 website template is 100% free download for everyone. You can modify and expand this template for your CMS websites. You can use it for commercial or non-commercial work. If you wish to support <a href="https://templatemo.com" class="tm-text-primary">TemplateMo</a>, please contact us.</p>
-								<p class="mb-4">You are <u>not allowed</u> to re-distribute the template ZIP file on any template collection website.</p>
-								<p class="mb-4">Vivamus sit amet justo sed erat iaculis consequat. Nulla suscipit posuere lectus ut venenatis. Proin sed orci eget tellus euismod vulputate eu eu arcu. Etiam a bibendum lorem. Curabitur ac bibendum odio. Vivamus euismod dui mauris, ut tincidunt mi congue quis.</p>
-								<p class="mb-0">Phasellus luctus orci dolor, a luctus massa tincidunt vitae. Integer sit amet odio id libero tincidunt dignissim in eget arcu. Aliquam tristique ut magna sit amet tincidunt. Sed tempor tellus nulla, molestie luctus lectus tincidunt id. Cras duismod leo a urna placerat, vel blandit turpis fermentum.</p>	
+								<h2 class="tm-page-title mb-4 tm-text-primary">ULIA MEDITAZIONE CON ALBERO D’ULIVO</h2>
+								<p class="mb-4">Noi esseri umani siamo abili analisti. Siamo davvero bravi a dividere e separare.
+Viviamo per ambiti di pertinenza, come se ci fosse un tempo per ogni cosa: un tempo
+per essere bambini ed uno per essere adulti, un tempo per conoscere, un altro per
+lavorare, un tempo per divertirsi ed infine un tempo per morire. Ma questa è una
+nostra illusione. Perché tutto avviene simultaneamente e in ogni istante siamo pieno e
+vuoto, nascita e morte, finito e infinito.<a href="https://templatemo.com" class="tm-text-primary">TemplateMo</a>, please contact us.</p>
+								<p class="mb-4">Privarsi di uno di questi aspetti, equivale a privarsi della propria interezza. Da questa
+consapevolezza, nasce ULIA, un progetto basato sull’impermanenza, sulla simultaneità
+e sulla sinestesia che caratterizzano la vita. Siamo le vittime della nostra sete di
+controllo e gli schiavi delle nostre definizioni di realtà. Pensiamo che le immagini si
+possano solo vedere e che la musica si possa solo ascoltare, che la comunicazione
+possa avvenire solo con gli esseri umani, che il tempo passi e sia lineare.</p>
+								<p class="mb-4">ULIA ci propone un cambio di prospettiva e ci testimonia che la musica può essere
+ascoltata con gli occhi, che un essere umano può comunicare con una pianta, che il
+tempo è solo l’unità di misura della vita e che il modo di percepire la realtà è una nostra
+scelta. Attraverso un viaggio sonoro e immersivo, ci fa fare esperienza che tutto è
+relazione e ci invita a riacquisire familiarità con le parti di noi che comunemente
+escludiamo, come il senso di vuoto e di infinito.
+</p>
+								<p class="mb-0">Dal dialetto salentino, “Ulia”, significa sia “albero di ulivo” che “vorrei”. Un albero
+d’ulivo virtuale, simbolo della vita e della relazione, ma anche del vuoto e della
+mancanza, crescerà con noi durante la serata e aprirà riflessioni profonde sulla musica,
+sul tempo, sulla relazione e sulla vita, esperienza da desiderare e co-creare</p>	
 							</div>							
 						</div>						
 					</div>					
