--- a/about.html
+++ b/about.html
@@ -70,12 +70,18 @@ https://templatemo.com/tm-552-video-catalog
 						<div class="col-12">
 							<div class="mx-auto tm-about-text-container px-3">
 								<h2 class="tm-page-title mb-4 tm-text-primary">ULIA MEDITAZIONE CON ALBERO D’ULIVO</h2>
-								<p class="mb-4">Noi esseri umani siamo abili analisti. Siamo davvero bravi a dividere e separare.
+								<p class="mb-4">
+									ULIA è un evento musicale immersivo per strumento solo ed elettronica.
+E’ un evento unico ed irriproducibile, in cui la componente sonora è frutto di
+un’improvvisazione estemporanea e quella visiva è generata in tempo reale in base alla
+									musica suonata, tramite un programma informatico d’avanguardia.</p>
+								<p class="mb-4">						
+									Noi esseri umani siamo abili analisti. Siamo davvero bravi a dividere e separare.
 Viviamo per ambiti di pertinenza, come se ci fosse un tempo per ogni cosa: un tempo
 per essere bambini ed uno per essere adulti, un tempo per conoscere, un altro per
 lavorare, un tempo per divertirsi ed infine un tempo per morire. Ma questa è una
 nostra illusione. Perché tutto avviene simultaneamente e in ogni istante siamo pieno e
-vuoto, nascita e morte, finito e infinito.<a href="https://templatemo.com" class="tm-text-primary">TemplateMo</a>, please contact us.</p>
+vuoto, nascita e morte, finito e infinito.</p>
 								<p class="mb-4">Privarsi di uno di questi aspetti, equivale a privarsi della propria interezza. Da questa
 consapevolezza, nasce ULIA, un progetto basato sull’impermanenza, sulla simultaneità
 e sulla sinestesia che caratterizzano la vita. Siamo le vittime della nostra sete di
