--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@ https://templatemo.com/tm-552-video-catalog
                     <div class="mx-auto pb-3 tm-about-text-container px-3">
                         <div class="row">
                             <div class="col-lg-6 mb-5">
-                                <form id="contact-form" action="" method="POST" class="tm-contact-form">
+                                <form id="contact-form" action="mailto:progettoulia@gmail.com" method="POST" enctype="text/plain" class="tm-contact-form">
                                   <div class="form-group">
                                     <input type="text" name="name" class="form-control rounded-0" placeholder="Name" required="" />
                                   </div>
@@ -97,10 +97,10 @@ https://templatemo.com/tm-552-video-catalog
                                   </div>
                                   <div class="form-group">
                                     <select class="form-control" id="contact-select" name="inquiry">
-                                      <option value="-">Subject</option>
-                                      <option value="sales">Sales &amp; Marketing</option>
-                                      <option value="creative">Creative Design</option>
-                                      <option value="uiux">UI / UX</option>
+                                      <option value="-">Chi sei?</option>
+                                      <option value="sales">Organizzatore</option>
+                                      <option value="creative">Curioso</option>
+                                      <option value="uiux">Spettatore</option>
                                     </select>
                                   </div>
                                   <div class="form-group">
@@ -112,15 +112,6 @@ https://templatemo.com/tm-552-video-catalog
                                     <button type="submit" class="btn btn-primary rounded-0 d-block ml-auto mr-0 tm-btn-animate tm-btn-submit tm-icon-submit"><span>Submit</span></button>
                                   </div>
                                 </form>    
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="mapouter mb-60">
-                                    <div class="gmap_canvas">
-                                        <iframe width="100%" height="520" id="gmap_canvas"
-                                            src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-                                    </div>
-                                </div>
                             </div>
                         </div>  
                     </div>                                      			
