--- a/video-page.html
+++ b/video-page.html
@@ -42,7 +42,7 @@ https://templatemo.com/tm-552-video-catalog
                                     <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
                                         <ul class="navbar-nav text-uppercase">
                                             <li class="nav-item active">
-                                                <a class="nav-link tm-nav-link" href="index.html">Videos <span class="sr-only">(current)</span></a>
+                                                <a class="nav-link tm-nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                                             </li>
                                             <li class="nav-item">
                                                 <a class="nav-link tm-nav-link" href="about.html">About</a>
@@ -75,7 +75,7 @@ https://templatemo.com/tm-552-video-catalog
 					<div class="row mb-5 pb-4">
 						<div class="col-12">
 							<!-- Video player 1422x800 -->
-							<video width="1422" height="800" controls autoplay>
+							<video width="1422" height="800" controls autoplay loop>
 							  <source src="video/wheat-field.mp4" type="video/mp4">							  
 							Your browser does not support the video tag.
 							</video>
@@ -103,7 +103,7 @@ https://templatemo.com/tm-552-video-catalog
 								</div>
 								<p class="mb-4">Author: <a href="https://templatemo.com" class="tm-text-link">TemplateMo</a></p>
 								<a href="#" class="tm-bg-white px-5 mb-4 d-inline-block tm-text-primary tm-likes-box tm-liked">
-									<i class="fas fa-heart mr-3 tm-liked-icon"></i>
+									<i clafa-heart mr-3 tm-liked-icon"></i>
 									<i class="far fa-heart mr-3 tm-not-liked-icon"></i>
 									<span id="tm-likes-count">486 likes</span>
 								</a>
